--- a/my_project/kkh/css/data_structure.css
+++ b/my_project/kkh/css/data_structure.css
@@ -35,11 +35,11 @@
 }
 .space-box {
   width: 100%;
-  height: 200px;
+  height: 400px;
 }
 
 @media (max-width: 600px) {
-  .mySidebar {
+  .sidebar {
     display: none;
   }
   .main-box {
