--- a/my_project/Dr_K/css/main.css
+++ b/my_project/Dr_K/css/main.css
@@ -243,7 +243,7 @@ body {
   /* background-color: rgba(255, 255, 255, 0.4); */
   background: linear-gradient(
     rgba(255, 255, 255, 0.8),
-    rgba(255, 255, 255, 0.1) 50%,
+    rgba(255, 255, 255, 0.4) 50%,
     rgba(255, 255, 255, 0.8)
   );
 }
@@ -265,9 +265,10 @@ body {
 }
 .info .text-box p {
   font-family: "Noto";
+  font-weight: bold;
   font-size: 3vw;
   margin: 30px 0;
-  color: #555555;
+  color: #333333;
 }
 .info .img-box {
   display: inline-block;
@@ -275,48 +276,48 @@ body {
 }
 
 /* technology section */
-.tech {
+.product {
   width: 100%;
   background-image: url(../img/bg4.jpg);
   background-size: cover;
   background-position: center;
   margin-bottom: 100px;
 }
-.tech .op-box {
+.product .op-box {
   width: 100%;
   background: linear-gradient(rgba(255, 255, 255, 0), white 95%);
 }
-.tech .tech-content {
+.product .tech-content {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
-.tech h2 {
+.product h2 {
   width: 100%;
   font-family: "Mont";
   font-size: 60px;
   margin-bottom: 50px;
 }
-.tech .content {
+.product .content {
   width: 70vw;
   height: 80vh;
 }
-.tech .content .tech-box {
+.product .content .tech-box {
   width: 70vw;
   position: absolute;
 }
-.tech .content .tech1 {
+.product .content .tech1 {
   opacity: 1;
 }
-.tech .content .tech2,
-.tech .content .tech3,
-.tech .content .tech4,
-.tech .content .tech5,
-.tech .content .tech6 {
+.product .content .tech2,
+.product .content .tech3,
+.product .content .tech4,
+.product .content .tech5,
+.product .content .tech6 {
   opacity: 0;
 }
-.tech .content .tech-img {
+.product .content .tech-img {
   width: 70vw;
   height: 30vh;
   border-radius: 30px;
@@ -325,33 +326,33 @@ body {
   background-position: center;
   background-size: cover;
 }
-.tech .content .img1 {
+.product .content .img1 {
   background-image: url(../img/tech1.jpg);
 }
-.tech .content .img2 {
+.product .content .img2 {
   background-image: url(../img/tech2.jpg);
 }
-.tech .content .img3 {
+.product .content .img3 {
   background-image: url(../img/splashing-165192_1920.jpg);
 }
-.tech .content .img4 {
+.product .content .img4 {
   background-image: url(../img/vaccine-5897391_1920.jpg);
 }
-.tech .content .img5 {
+.product .content .img5 {
   background-image: url(../img/tech5.jpg);
 }
-.tech .content .img6 {
+.product .content .img6 {
   background-image: url(../img/white-1772985_1920.jpg);
 }
-.tech .content .text-box h3 {
+.product .content .text-box h3 {
   font-family: "Mont";
   font-size: 60px;
   margin-bottom: 20px;
 }
-.tech .content .text-box p {
+.product .content .text-box p {
   font-size: 30px;
 }
-.tech .buttons {
+.product .buttons {
   display: grid;
   width: 70vw;
   grid-template-columns: repeat(6, 1fr);
@@ -359,7 +360,7 @@ body {
   margin-bottom: 50px;
   gap: 20px;
 }
-.tech .buttons button {
+.product .buttons button {
   cursor: pointer;
   padding: 5px;
   border: none;
@@ -369,13 +370,13 @@ body {
   color: black;
   transition: 0.2s;
 }
-.tech .buttons .active {
-  background-color: #4da0e4;
+.product .buttons .active {
+  background-color: #107bd2;
   color: white;
   box-shadow: 0px 0px 5px 3px white;
 }
-.tech .buttons button:hover {
-  background-color: #8dbada;
+.product .buttons button:hover {
+  background-color: #76aed6;
   color: white;
   box-shadow: 0px 0px 5px 3px white;
 }
@@ -386,6 +387,7 @@ body {
   background-size: cover;
   background-position: center;
   overflow: hidden;
+  margin-bottom: 100px;
 }
 .rnd .op-box {
   width: 100%;
@@ -428,10 +430,57 @@ body {
   font-size: 2vw;
 }
 
+.CEO {
+  background-image: url(../img/bg6.jpg);
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+}
+.CEO .op-box {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0.7) 50%,
+    rgba(255, 255, 255, 1)
+  );
+}
+.CEO h2 {
+  font-family: "Mont";
+  font-size: 6vw;
+  margin-bottom: 30px;
+}
+.CEO p {
+  font-weight: bold;
+  font-size: 2.5vw;
+  margin-bottom: 20px;
+}
+
 .community h2 {
   font-family: "Mont";
   font-size: 8vw;
   margin-bottom: 50px;
+}
+.community .read-more {
+  font-family: "Mont";
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  font-size: 2.2vw;
+  margin-bottom: 2vw;
+  overflow: hidden;
+}
+.community .read-more .under-line {
+  position: absolute;
+  left: -100%;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #353866;
+  transition: 0.2s;
+}
+.community .read-more:hover .under-line {
+  left: 0;
 }
 .community .contents {
   display: grid;
@@ -441,13 +490,16 @@ body {
 }
 .community .content {
   cursor: pointer;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  position: relative;
   border: 0.2vw solid #353866;
   border-radius: 8px;
+  height: 15vw;
 }
 .community .content .num-box {
+  position: absolute;
+  left: 10%;
+  top: 50%;
+  transform: translateY(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -457,16 +509,28 @@ body {
   border-radius: 8px;
   width: 8vw;
   height: 8vw;
-  margin: 3vw 0;
 }
 .community .content .text-box {
-  margin: 3vw 0;
+  position: absolute;
+  left: 37%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 58%;
 }
 .community .content .text-box h3 {
-  font-size: 3vw;
+  font-size: 2vw;
+  margin-bottom: 1vw;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .community .content .text-box p {
-  font-size: 1.5vw;
+  font-size: 1vw;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .community .content:hover {
   background-color: #353866;
@@ -502,15 +566,15 @@ footer .content .text-box p {
 }
 
 @media (max-width: 1000px) {
-  .tech .buttons {
+  .product .buttons {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
-  .tech .content .text-box h3 {
+  .product .content .text-box h3 {
     font-size: 40px;
     margin-bottom: 15px;
   }
-  .tech .content .text-box p {
+  .product .content .text-box p {
     font-size: 20px;
   }
 }
@@ -535,18 +599,18 @@ footer .content .text-box p {
   .nav .nav-popup .nav-box ul li {
     font-size: 12px;
   }
-  .tech .buttons {
+  .product .buttons {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
-  .tech h2 {
+  .product h2 {
     font-size: 30px;
   }
-  .tech .content .text-box h3 {
+  .product .content .text-box h3 {
     font-size: 25px;
     margin-bottom: 10px;
   }
-  .tech .content .text-box p {
+  .product .content .text-box p {
     font-size: 15px;
   }
   footer .content .logo {
@@ -557,7 +621,7 @@ footer .content .text-box p {
   .nav .nav-menu .nav-box2 ul li {
     font-size: 12px;
   }
-  .tech .buttons {
+  .product .buttons {
     gap: 10px;
   }
   .info .text-box h2 {
@@ -565,5 +629,32 @@ footer .content .text-box p {
   }
   .info .text-box p {
     font-size: 15px;
+  }
+  .rnd .content img {
+    display: none;
+  }
+  .rnd .content .text-box {
+    width: 100%;
+  }
+  .community .contents {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .community .content {
+    position: relative;
+    border-radius: 4px;
+    height: 60px;
+  }
+  .community .content .num-box {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+  }
+  .community .content .text-box {
+    position: absolute;
+    left: 30%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 65%;
   }
 }
