update my project
add detail for responsive size /
fix README

--- a/my_project/anywhere/css/main.css
+++ b/my_project/anywhere/css/main.css
@@ -106,7 +106,7 @@ body {
   text-shadow: 0px 0px 4px #333333;
   color: white;
   background-color: rgba(0, 0, 0, 0);
-  border: 0.5vw solid white;
+  border: 2px solid white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,6 +114,7 @@ body {
   width: 200px;
   height: 100px;
   z-index: 1000;
+  transition: 0.2s;
 }
 .header .menu-btn:hover {
   background-color: rgba(0, 0, 0, 0.2);
@@ -232,7 +233,11 @@ body {
 .menu-section .menu-slider-box {
   position: relative;
   width: 100%;
-  height: 40vw;
+  height: 30vw;
+  max-height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .menu-section .menu-slider-box .menu-slider-background {
   position: absolute;
@@ -246,22 +251,15 @@ body {
   background-position: center;
 }
 .menu-section .menu-slider {
-  width: 90%;
-  height: 100%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-}
-.menu-section .menu-slider .mSwiper {
-  padding: 10px;
+  width: 66vw;
 }
 .menu-section .menu-slider .mSwiper .swiper-slide {
   cursor: pointer;
-  height: 20vw;
+  height: 15vw;
   color: white;
   background-size: cover;
   background-position: center;
-  border-radius: 3vw;
+  border-radius: 1vw;
   box-shadow: 5px 5px 5px 5px #999999;
 }
 .menu-section .menu-slider .mSwiper .s1 {
@@ -295,9 +293,8 @@ body {
 /* menu box  */
 .menu-wrapper {
   position: relative;
-  font-family: "Jua";
   width: 100%;
-  height: 45vw;
+  height: 37vw;
 }
 .menu-wrapper .inner-box {
   position: absolute;
@@ -305,12 +302,13 @@ body {
   transform: translateY(-50%);
 }
 .menu-wrapper .inner-right {
-  right: 5%;
+  right: 10%;
 }
 .menu-wrapper .inner-left {
-  left: 10%;
+  left: 15%;
 }
 .menu-wrapper .inner-box h2 {
+  font-family: "Jua";
   text-align: center;
   margin-bottom: 2vw;
   font-size: 5vw;
@@ -324,14 +322,16 @@ body {
 .menu-wrapper .inner-box .menu .container {
   display: grid;
   gap: 4vw 4vw;
-  grid-template-columns: repeat(3, 22vw);
-  grid-template-rows: repeat(1, 32vw);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 .menu-wrapper .inner-box .menu .container .item {
   cursor: pointer;
   background-color: white;
   border-radius: 3vw;
   overflow: hidden;
+  width: 16vw;
+  height: 24vw;
 }
 .menu-wrapper .inner-box .menu .container .item .food-img {
   width: 100%;
@@ -340,7 +340,6 @@ body {
   background-position: center center;
 }
 .menu-wrapper .inner-box .menu .container .item .text-box {
-  font-family: "Jua";
   box-sizing: border-box;
   width: 100%;
   height: 50%;
@@ -351,13 +350,14 @@ body {
   align-items: center;
 }
 .menu-wrapper .inner-box .menu .container .item .text-box h3 {
-  font-size: 2.3vw;
+  font-family: "Jua";
+  font-size: 1.5vw;
 }
 .menu-wrapper .inner-box .menu .container .item .text-box h3 br {
   display: none;
 }
 .menu-wrapper .inner-box .menu .container .item .text-box p {
-  font-size: 1.7vw;
+  font-size: 1vw;
 }
 .menu-wrapper .img1 {
   background-image: url("../img/bburingkle.png");
@@ -432,8 +432,8 @@ body {
   margin: 1vw;
 }
 .info-section .container .item .text-box p {
-  font-size: 1.5vw;
-  margin: 5px;
+  font-size: 1vw;
+  margin: 1vw;
 }
 
 /* info-2 section */
@@ -696,24 +696,23 @@ body {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .header .menu-btn {
     width: 100px;
     height: 50px;
     font-size: 15px;
   }
+  .menu-section .menu-slider {
+    width: 82vw;
+  }
   .menu-section .menu-slider .mSwiper .swiper-slide {
-    height: 27vw;
+    height: 20vw;
   }
   .menu-wrapper .inner-box .menu .container .item .text-box h3 {
-    font-size: 3.6vw;
-    padding: 0.3vw;
+    font-size: 2.8vw;
   }
   .menu-wrapper .inner-box .menu .container .item .text-box p {
     display: none;
-  }
-  .menu-wrapper .inner-box .menu .container .item .text-box h3 br {
-    display: inline-block;
   }
   .info-section .container .item .text-box p {
     display: none;
