--- a/my_project/Dr_K/css/main.css
+++ b/my_project/Dr_K/css/main.css
@@ -29,6 +29,12 @@ body {
   padding: 50px 0;
   margin: auto 10%;
 }
+.inner2 {
+  box-sizing: border-box;
+  width: 60%;
+  padding: 50px 0;
+  margin: auto 20%;
+}
 
 /* navigator */
 .nav {
@@ -91,7 +97,6 @@ body {
 .nav .nav-menu .nav-box1 .lists .nav-list {
   font-size: 16px;
 }
-
 .nav .nav-menu .nav-box1 .lists .nav-list a i {
   color: white;
   transition: 0.2s;
@@ -119,7 +124,7 @@ body {
   text-align: center;
 }
 .nav .nav-menu .nav-box2 .lists .spacer {
-  width: 2px;
+  width: 1px;
   height: 20px;
   background-color: white;
   box-shadow: 1px 1px 1px 0px #666666;
@@ -169,10 +174,13 @@ body {
   text-align: center;
   color: #666666;
 }
+.nav .nav-popup .nav-box ul li:hover {
+  background-color: #dddddd;
+}
 .nav .nav-popup .nav-box .spacer {
   width: 1px;
-  margin-top: 20px;
-  height: 120px;
+  /* margin-top: 20px; */
+  height: 160px;
   background-color: #aaaaaa;
 }
 
@@ -242,9 +250,9 @@ body {
   height: 100%;
   /* background-color: rgba(255, 255, 255, 0.4); */
   background: linear-gradient(
-    rgba(255, 255, 255, 0.8),
-    rgba(255, 255, 255, 0.4) 50%,
-    rgba(255, 255, 255, 0.8)
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0.6) 50%,
+    rgba(255, 255, 255, 1)
   );
 }
 .info .container {
@@ -255,19 +263,19 @@ body {
   align-items: center;
 }
 .info .text-box {
-  width: 80vw;
+  width: 70vw;
 }
 .info .text-box h2 {
   font-family: "Mont";
-  font-size: 8vw;
-  margin: 30px 0;
+  font-size: 6vw;
+  margin: 7vw 0;
   color: #333333;
 }
 .info .text-box p {
   font-family: "Noto";
   font-weight: bold;
-  font-size: 3vw;
-  margin: 30px 0;
+  font-size: 2vw;
+  margin: 4vw 0;
   color: #333333;
 }
 .info .img-box {
@@ -281,11 +289,15 @@ body {
   background-image: url(../img/bg4.jpg);
   background-size: cover;
   background-position: center;
-  margin-bottom: 100px;
+  margin-bottom: 10vh;
 }
 .product .op-box {
   width: 100%;
-  background: linear-gradient(rgba(255, 255, 255, 0), white 95%);
+  background: linear-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0.9) 5%,
+    white 95%
+  );
 }
 .product .tech-content {
   display: flex;
@@ -296,16 +308,45 @@ body {
 .product h2 {
   width: 100%;
   font-family: "Mont";
-  font-size: 60px;
-  margin-bottom: 50px;
+  font-size: 4vw;
+  margin-bottom: 5vh;
 }
 .product .content {
+  width: 80vw;
+  height: 60vh;
+}
+.product .buttons {
+  display: grid;
   width: 70vw;
-  height: 80vh;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+}
+.product .buttons button {
+  cursor: pointer;
+  padding: 0.8vw;
+  border: none;
+  font-size: 1vw;
+  background-color: white;
+  color: black;
+  border: 1px solid #aaaaaa;
+  transition: 0.2s;
+}
+.product .buttons .active {
+  border: none;
+  background-color: #107bd2;
+  color: white;
+}
+.product .buttons button:hover {
+  border: none;
+  background-color: #76aed6;
+  color: white;
 }
 .product .content .tech-box {
-  width: 70vw;
+  width: 80vw;
   position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
 }
 .product .content .tech1 {
   opacity: 1;
@@ -318,13 +359,12 @@ body {
   opacity: 0;
 }
 .product .content .tech-img {
-  width: 70vw;
-  height: 30vh;
-  border-radius: 30px;
-  box-shadow: 0px 0px 20px 5px white;
+  width: 25vw;
+  height: 20vw;
   margin-bottom: 5vh;
   background-position: center;
   background-size: cover;
+  margin: 3vw;
 }
 .product .content .img1 {
   background-image: url(../img/tech1.jpg);
@@ -344,41 +384,16 @@ body {
 .product .content .img6 {
   background-image: url(../img/white-1772985_1920.jpg);
 }
+.product .content .text-box {
+  width: 50vw;
+  padding: 3vw;
+}
 .product .content .text-box h3 {
-  font-family: "Mont";
-  font-size: 60px;
-  margin-bottom: 20px;
+  font-size: 3vw;
+  margin-bottom: 3vw;
 }
 .product .content .text-box p {
-  font-size: 30px;
-}
-.product .buttons {
-  display: grid;
-  width: 70vw;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  margin-bottom: 50px;
-  gap: 20px;
-}
-.product .buttons button {
-  cursor: pointer;
-  padding: 5px;
-  border: none;
-  border-radius: 5px;
-  font-size: 15px;
-  background-color: aliceblue;
-  color: black;
-  transition: 0.2s;
-}
-.product .buttons .active {
-  background-color: #107bd2;
-  color: white;
-  box-shadow: 0px 0px 5px 3px white;
-}
-.product .buttons button:hover {
-  background-color: #76aed6;
-  color: white;
-  box-shadow: 0px 0px 5px 3px white;
+  font-size: 1.5vw;
 }
 
 .rnd {
@@ -387,30 +402,31 @@ body {
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  margin-bottom: 100px;
+  margin-bottom: 30vh;
 }
 .rnd .op-box {
   width: 100%;
   background: linear-gradient(
-    rgba(255, 255, 255, 0.7),
-    rgba(255, 255, 255, 0.9)
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 1)
   );
 }
 .rnd h2 {
-  font-size: 7vw;
-  margin-bottom: 50px;
+  font-size: 5vw;
+  margin-bottom: 15vh;
 }
 .rnd .content {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 10vh;
 }
 .rnd .content img {
   transition: 0.2s;
-  width: 30%;
-  height: 17vw;
+  width: 23%;
+  height: 11vw;
 }
 .rnd .content:hover img {
   transform: scale(1.2);
@@ -423,11 +439,11 @@ body {
   justify-content: center;
 }
 .rnd .content .text-box h3 {
-  font-size: 5vw;
+  font-size: 3vw;
   margin-bottom: 20px;
 }
 .rnd .content .text-box p {
-  font-size: 2vw;
+  font-size: 1vw;
 }
 
 .CEO {
@@ -435,6 +451,7 @@ body {
   background-position: center;
   background-size: cover;
   overflow: hidden;
+  margin-bottom: 30vh;
 }
 .CEO .op-box {
   width: 100%;
@@ -444,22 +461,23 @@ body {
     rgba(255, 255, 255, 0.7) 50%,
     rgba(255, 255, 255, 1)
   );
+  text-align: center;
 }
 .CEO h2 {
   font-family: "Mont";
-  font-size: 6vw;
-  margin-bottom: 30px;
+  font-size: 4vw;
+  margin-bottom: 8vh;
 }
 .CEO p {
   font-weight: bold;
-  font-size: 2.5vw;
-  margin-bottom: 20px;
+  font-size: 1.3vw;
+  margin-bottom: 4vh;
 }
 
 .community h2 {
   font-family: "Mont";
-  font-size: 8vw;
-  margin-bottom: 50px;
+  font-size: 5vw;
+  margin-bottom: 10vh;
 }
 .community .read-more {
   font-family: "Mont";
@@ -486,14 +504,14 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
+  gap: 2vw;
 }
 .community .content {
   cursor: pointer;
   position: relative;
   border: 0.2vw solid #353866;
   border-radius: 8px;
-  height: 15vw;
+  height: 8vw;
 }
 .community .content .num-box {
   position: absolute;
@@ -503,12 +521,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3vw;
+  font-size: 2vw;
   background-color: #353866;
   color: white;
   border-radius: 8px;
-  width: 8vw;
-  height: 8vw;
+  width: 5vw;
+  height: 5vw;
 }
 .community .content .text-box {
   position: absolute;
@@ -518,7 +536,7 @@ body {
   width: 58%;
 }
 .community .content .text-box h3 {
-  font-size: 2vw;
+  font-size: 1.3vw;
   margin-bottom: 1vw;
   width: 100%;
   white-space: nowrap;
@@ -526,7 +544,7 @@ body {
   text-overflow: ellipsis;
 }
 .community .content .text-box p {
-  font-size: 1vw;
+  font-size: 0.8vw;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -565,22 +583,21 @@ footer .content .text-box p {
   margin: 10px 0;
 }
 
-@media (max-width: 1000px) {
-  .product .buttons {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+@media (max-width: 768px) {
+  .inner2 {
+    width: 80%;
+    margin: auto 10%;
   }
-  .product .content .text-box h3 {
-    font-size: 40px;
-    margin-bottom: 15px;
-  }
-  .product .content .text-box p {
-    font-size: 20px;
-  }
-}
 
-@media (max-width: 600px) {
-  .nav .nav-menu .nav-box1 ul li {
+  .nav .nav-menu .nav-box1 .logo img {
+    width: 40px;
+    height: 40px;
+  }
+  .nav .nav-menu .nav-box1 .logo h1 {
+    font-size: 30px;
+    padding: 14px;
+  }
+  .nav .nav-menu .nav-box1 .lists .nav-list {
     display: none;
   }
   .nav .nav-menu .nav-box1 > i {
@@ -597,8 +614,19 @@ footer .content .text-box p {
     width: 23vw;
   }
   .nav .nav-popup .nav-box ul li {
-    font-size: 12px;
+    font-size: 10px;
   }
+
+  .header .headerSwiper .swiper-wrapper .swiper-slide .slide .text-box h2 {
+    font-size: 20px;
+    margin: 25px 0;
+  }
+  .header .headerSwiper .swiper-wrapper .swiper-slide .slide .text-box p {
+    font-size: 12px;
+    margin: 25px 0;
+    text-align: left;
+  }
+
   .product .buttons {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -606,29 +634,35 @@ footer .content .text-box p {
   .product h2 {
     font-size: 30px;
   }
+  .product .content .tech-box {
+    flex-direction: column;
+    align-items: center;
+  }
+  .product .content .tech-img {
+    width: 50vw;
+    height: 30vw;
+    margin-top: 5vh;
+  }
+  .product .content .text-box {
+    width: 60vw;
+    padding: 0;
+  }
   .product .content .text-box h3 {
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 10px;
   }
   .product .content .text-box p {
-    font-size: 15px;
+    font-size: 10px;
   }
-  footer .content .logo {
-    display: none;
+
+  .rnd {
+    margin-bottom: 10vh;
   }
-}
-@media (max-width: 400px) {
-  .nav .nav-menu .nav-box2 ul li {
-    font-size: 12px;
+  .rnd h2 {
+    margin-bottom: 7vh;
   }
-  .product .buttons {
-    gap: 10px;
-  }
-  .info .text-box h2 {
-    font-size: 35px;
-  }
-  .info .text-box p {
-    font-size: 15px;
+  .rnd .content {
+    margin-bottom: 5vh;
   }
   .rnd .content img {
     display: none;
@@ -636,25 +670,50 @@ footer .content .text-box p {
   .rnd .content .text-box {
     width: 100%;
   }
+  .rnd .content .text-box h3 {
+    font-size: 4vw;
+    margin-bottom: 20px;
+  }
+  .rnd .content .text-box p {
+    font-size: 10px;
+  }
+
+  .CEO {
+    margin-bottom: 10vh;
+  }
+  .CEO .op-box {
+    text-align: left;
+  }
+  .CEO h2 {
+    font-family: "Mont";
+    font-size: 6vw;
+    margin-bottom: 8vh;
+  }
+  .CEO p {
+    font-weight: bold;
+    font-size: 2vw;
+    margin-bottom: 4vh;
+  }
+
+  .community h2 {
+    font-size: 8vw;
+  }
   .community .contents {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(6, 1fr);
   }
   .community .content {
-    position: relative;
     border-radius: 4px;
-    height: 60px;
+    height: 16vw;
   }
   .community .content .num-box {
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
+    font-size: 4vw;
+    border-radius: 4px;
+    width: 10vw;
+    height: 10vw;
   }
-  .community .content .text-box {
-    position: absolute;
-    left: 30%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 65%;
+
+  footer .content .logo {
+    display: none;
   }
 }
