--- a/my_project/my_portfolio/css/header.css
+++ b/my_project/my_portfolio/css/header.css
@@ -1,6 +1,74 @@
-.header h1 {
+@font-face {
+  font-family: "KungFu";
+  src: url(../../font/KungFu/KungFuMasterLeftalic-nRjBV.otf);
+}
+
+.header-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: white;
-  font-size: 5vw;
+  z-index: 200;
+}
+.header-nav h2 {
+  padding: 0 0 0 5vw;
+  margin: 0;
+  font-size: 1.5vw;
+}
+.header-nav .ani-block {
+  position: absolute;
+  top: 50%;
+  left: 2vw;
+  width: 2vw;
+  height: 0.3vw;
+  background-color: white;
+
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+.header-nav .ani1 {
+  animation-name: one;
+}
+.header-nav .ani2 {
+  animation-name: two;
+}
+.header-nav .ani3 {
+  animation-name: three;
+}
+.header-nav .ani4 {
+  animation-name: four;
+}
+.header-nav .ani5 {
+  animation-name: five;
+}
+.header-nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5vw 0 0;
+}
+.header-nav ul li {
+  width: 8vw;
+  font-size: 1vw;
+  padding: 0;
+}
+
+.header .text-box {
+  font-family: "KungFu";
+  color: white;
+}
+.header .text-box h2 {
+  font-size: 8vw;
+}
+span {
+  color: lightblue;
+  font-size: 9vw;
 }
 
 .area {
@@ -22,7 +90,7 @@
   width: 20px;
   height: 20px;
   background: rgba(255, 255, 255, 0.2);
-  animation: animate 20s linear infinite;
+  animation: animate 10s linear infinite;
   bottom: -150px;
 }
 .area .circles li:nth-child(1) {
@@ -102,5 +170,50 @@
     transform: translateY(-1000px) rotate(720deg);
     opacity: 0;
     border-radius: 50%;
+  }
+}
+
+@keyframes one {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(360deg);
+  }
+}
+
+@keyframes two {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(720deg);
+  }
+}
+
+@keyframes three {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(1080deg);
+  }
+}
+
+@keyframes four {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(1440deg);
+  }
+}
+
+@keyframes five {
+  from {
+    transform: translateY(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateY(-50%) rotate(1800deg);
   }
 }
