--- a/my_project/my_portfolio/css/main.css
+++ b/my_project/my_portfolio/css/main.css
@@ -19,3 +19,10 @@ section {
   justify-content: center;
   align-items: center;
 }
+
+.text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
