--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -7,7 +7,7 @@
 
 #navbar-scrollspy {
   position: fixed;
-  right: 2%;
+  right: 0%;
   top: 50%;
   transform: translateY(-50%);
   z-index: 200;
@@ -32,7 +32,7 @@
 }
 #navbar-scrollspy ul li a p {
   opacity: 0;
-  width: 8vw;
+  width: 12vw;
   font-size: 15px;
   margin: 0 0 0 15px;
   color: black;
@@ -41,7 +41,18 @@
 #navbar-scrollspy ul li .active div {
   width: 2vw;
   transform: rotate(40deg) translate(0.4vw, -0.4vw);
-  background-color: cadetblue;
+}
+#navbar-scrollspy ul li .active .color1 {
+  background-color: #80d4f6;
+}
+#navbar-scrollspy ul li .active .color2 {
+  background-color: #4e54c8;
+}
+#navbar-scrollspy ul li .active .color3 {
+  background-color: #f26d5b;
+}
+#navbar-scrollspy ul li .active .color4 {
+  background-color: #e94e77;
 }
 #navbar-scrollspy ul li .active p {
   opacity: 1;
