--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -49,7 +49,7 @@
   background-color: #4e54c8;
 }
 #navbar-scrollspy ul li .active .color3 {
-  background-color: #f26d5b;
+  background-color: #eab5ff;
 }
 #navbar-scrollspy ul li .active .color4 {
   background-color: #e94e77;
