--- a/my_project/my_portfolio/css/headerBack.css
+++ b/my_project/my_portfolio/css/headerBack.css
@@ -1,13 +1,12 @@
 .area {
-  background: #4e54c8;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  background: linear-gradient(#353866, #4f86c6);
 }
 .area .circles {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 200vh;
   overflow: hidden;
 }
 .area .circles li {
@@ -88,14 +87,77 @@
 
 @keyframes animate {
   0% {
-    transform: translateY(0) rotate(0deg);
+    transform: translateY(150vh) rotate(0deg);
     opacity: 1;
     border-radius: 0;
   }
 
+  50% {
+    opacity: 0.5;
+  }
+
   100% {
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
+    transform: translateY(-250vh) rotate(720deg);
+    opacity: 1;
     border-radius: 50%;
+  }
+}
+
+.area {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.area .air {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
+  background-size: 1000px 100px;
+}
+.area .air.air1 {
+  animation: wave 30s linear infinite;
+  z-index: 1000;
+  opacity: 1;
+  animation-delay: 0s;
+  bottom: 0;
+}
+.area .air.air2 {
+  animation: wave2 15s linear infinite;
+  z-index: 999;
+  opacity: 0.5;
+  animation-delay: -5s;
+  bottom: 10px;
+}
+.area .air.air3 {
+  animation: wave 30s linear infinite;
+  z-index: 998;
+  opacity: 0.2;
+  animation-delay: -2s;
+  bottom: 15px;
+}
+.area .air.air4 {
+  animation: wave2 5s linear infinite;
+  z-index: 997;
+  opacity: 0.7;
+  animation-delay: -5s;
+  bottom: 20px;
+}
+@keyframes wave {
+  0% {
+    background-position-x: 0px;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
+}
+@keyframes wave2 {
+  0% {
+    background-position-x: 0px;
+  }
+  100% {
+    background-position-x: -1000px;
   }
 }
