--- a/my_project/my_portfolio/css/skill.css
+++ b/my_project/my_portfolio/css/skill.css
@@ -7,15 +7,33 @@
   src: url(../../font/Noto_Sans_KR/NotoSansKR-Light.otf);
 }
 
-.skill .text-box h2 {
+.skill h2 {
   font-family: "Mont";
-  font-size: 7vw;
+  font-size: 5vw;
+}
+
+.skill .text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 80vh;
+}
+.skill .text-box .item-box {
+  width: 50vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.rev {
+  flex-direction: row-reverse;
 }
 .skill .text-box p {
   font-family: "Noto";
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 .skill .img-box img {
-  width: 10vw;
-  height: 10vw;
+  margin: 0 1vw;
+  width: 8vw;
+  height: 8vw;
 }
