update my portfolio
add design portfolio section /
update skill text /
other details

--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -49,10 +49,22 @@
   background-color: #272d9c;
 }
 #navbar-scrollspy ul li .active .color3 {
-  background-color: #eab5ff;
+  background-color: #fe7373;
 }
 #navbar-scrollspy ul li .active .color4 {
   background-color: #eab5ff;
+}
+#navbar-scrollspy ul li .active .color5 {
+  background-color: darkviolet;
+}
+#navbar-scrollspy ul li .active .color6 {
+  background-color: #5f8bfa;
+}
+#navbar-scrollspy ul li .active .color7 {
+  background-color: #666666;
+}
+#navbar-scrollspy ul li .active .color8 {
+  background-color: #d2ff1f;
 }
 #navbar-scrollspy ul li .active p {
   opacity: 1;
