--- a/my_project/my_portfolio/css/headerBack.css
+++ b/my_project/my_portfolio/css/headerBack.css
@@ -27,10 +27,10 @@
 }
 .area .circles li:nth-child(2) {
   left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 100px;
+  height: 100px;
   animation-delay: 2s;
-  animation-duration: 12s;
+  animation-duration: 28s;
 }
 .area .circles li:nth-child(3) {
   left: 70%;
@@ -83,6 +83,72 @@
   height: 150px;
   animation-delay: 0s;
   animation-duration: 11s;
+}
+.area .circles li:nth-child(11) {
+  left: 15%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 2s;
+}
+.area .circles li:nth-child(12) {
+  left: 20%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 3s;
+  animation-duration: 12s;
+}
+.area .circles li:nth-child(13) {
+  left: 35%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+.area .circles li:nth-child(14) {
+  left: 45%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 1s;
+  animation-duration: 18s;
+}
+.area .circles li:nth-child(15) {
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 3s;
+}
+.area .circles li:nth-child(16) {
+  left: 60%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 5s;
+}
+.area .circles li:nth-child(17) {
+  left: 5%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 40s;
+}
+.area .circles li:nth-child(18) {
+  left: 70%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 13s;
+  animation-duration: 45s;
+}
+.area .circles li:nth-child(19) {
+  left: 25%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 3s;
+  animation-duration: 32s;
+}
+.area .circles li:nth-child(20) {
+  left: 85%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 1s;
+  animation-duration: 30s;
 }
 
 @keyframes animate {
