--- a/my_project/my_portfolio/css/mindSet.css
+++ b/my_project/my_portfolio/css/mindSet.css
@@ -6,6 +6,10 @@
   font-family: "Noto";
   src: url(../../font/Noto_Sans_KR/NotoSansKR-Light.otf);
 }
+@font-face {
+  font-family: "Notob";
+  src: url(../../font/Noto_Sans_KR/NotoSansKR-Bold.otf);
+}
 
 .mind {
   position: relative;
@@ -29,7 +33,7 @@
   width: 60vw;
   height: 55vh;
   margin: 5vh auto 5vh auto;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .mind .content .text-box {
   position: absolute;
@@ -48,13 +52,17 @@
 .mind .content .text-box h2 {
   font-family: "Mont";
   font-size: 3vw;
-  transform: translateX(-5vw);
+  transform: translateX(-8vw);
   margin-bottom: 5vh;
 }
 .mind .content .text-box p {
   font-family: "Noto";
   font-size: 1.3vw;
-  transform: translateX(-4vw);
+  transform: translateX(-6vw);
+}
+.mind .content .text-box p span {
+  font-family: "Notob";
+  font-size: 1.7vw;
 }
 .mind .content .active h2,
 .mind .content .active p {
@@ -99,4 +107,25 @@
   border-radius: 1vw;
   background-color: rgba(126, 41, 162, 1);
   z-index: 500;
+}
+
+.mind .slide-bar {
+  position: absolute;
+  bottom: 4vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20vw;
+  height: 0.6vw;
+  border-radius: 0.3vw;
+  background-color: white;
+  z-index: 200;
+  overflow: hidden;
+}
+.mind .slide-bar .progress {
+  position: absolute;
+  left: -100%;
+  width: 20vw;
+  height: 0.6vw;
+  border-radius: 0.3vw;
+  background: linear-gradient(rgba(255, 215, 252, 1), rgb(255, 96, 252));
 }
